--- a/styles.css
+++ b/styles.css
@@ -21,12 +21,12 @@ input[type=number] {
 
 .global-container{
     width: 50%;
-    height: 80vh;
+    height: 100vh;
     margin-left: auto;
     margin-right: auto;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: center
 }
 
 .logo{
@@ -42,7 +42,7 @@ input[type=number] {
 
 .tip-calculator-container{
     width: 100%;
-    min-height: 50vh;
+    min-height: 40vh;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
